# csm

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: api.rs  archive.rs  collaboration.rs  config.rs  discovery.rs  error.rs  lib.rs  main.rs  models.rs  project.rs  scanner.rs  scheduler.rs  server.rs  state.rs  storage.rs  summary.rs
backend/src/mounts/: fuse.rs  mod.rs  models.rs  mysql.rs  policy.rs  router.rs  storage.rs
docs/: codex-session-manager-prd.md  lan-codex-collaboration-design.md  project-context-mounts-design.md  unified-project-identity-design.md
frontend/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  i18n.tsx  types.ts
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: Badge.tsx  CollaborationPanel.tsx  MainList.tsx  PreviewPanel.tsx  Sidebar.tsx
