[package]
name = "codex-session-manager-tauri"
version = "0.1.0"
description = "Traceway desktop app"
authors = ["d-robotics"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.85"

[lib]
name = "codex_session_manager_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
backend = { path = "../../backend" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
